--- a/templates/products.html
+++ b/templates/products.html
@@ -169,21 +169,21 @@
                 <div class="deal-leftmk left-side">
                     <h3 class="sear-head">Special Deals</h3>
                     {% for la in latest  %}
-                        
+
                     <div class="special-sec1 row mb-3">
                         <div class="img-deals col-md-4">
-                        <a href="/single/{{la.slug}}">
-                            <img src="{{la.product_image.url}}" class="img-fluid" alt="">
-                        </a>
+                            <a href="/single/{{la.slug}}">
+                                <img src="{{la.product_image.url}}" class="img-fluid" alt="">
+                            </a>
                         </div>
                         <div class="img-deal1 col-md-4">
                             <h3>{{la.product_name}}</h3>
                             <a href="/single/{{la.slug}}">{{la.prize}}</a>
                         </div>
-
+                        {{la.product_image.url}}
                     </div>
                     {% endfor %}
-                    
+
                 </div>
                 <!-- //deals -->
 
@@ -219,15 +219,15 @@
 
 
 
-    <button type="submit" style="margin-top:1em ;" id="pr{{products.slug}}"
-    class="btn btn-info cart">
-    
-    <span style="color: rgb(255, 255, 255); "><i class="fa fa-shopping-cart"
-        aria-hidden="true"></i>
-    </span>
-    
-    <span class="glyphicon glyphicon-shopping-cart"></span>
-    add to cart</button>
+                                <button type="submit" style="margin-top:1em ;" id="{{products.id}}"
+                                    class="btn btn-info cart update-cart">
+
+                                    <span style="color: rgb(255, 255, 255); "><i class="fa fa-shopping-cart"
+                                            aria-hidden="true"></i>
+                                    </span>
+
+                                    <span class="glyphicon glyphicon-shopping-cart"></span>
+                                    add to cart</button>
 
                             </div>
                         </div>
@@ -251,31 +251,6 @@
 
 
 {% block js %}
-<script>
-    console.log('working');
-    if(localStorage.getItem('cart') == null){
-    var cart = {};
-    }
-    else
-    {
-    cart = JSON.parse(localStorage.getItem('cart'));
-    document.getElementById('cart').innerHTML = Object.keys(cart).length;
-    }
-    $('.cart').click(function(){
-    console.log('clicked');
-    var idstr = this.id.toString();
-    console.log(idstr);
-    if (cart[idstr] !=undefined){
-    cart[idstr] = cart[idstr] + 1;
-    }
-    else
-    {
-    cart[idstr] = 1;
-    }
-    console.log(cart);
-    localStorage.setItem('cart', JSON.stringify(cart));
-    document.getElementById('cart').innerHTML = Object.keys(cart).length;
-    });
-    </script>
+<script src="{% static 'css/cart.js' %}"></script>
 {% endblock %}
 {% endblock body %}
