--- a/templates/home.html
+++ b/templates/home.html
@@ -79,7 +79,7 @@
                             <a href="#"> login as {{request.user}} <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                             <input type="checkbox" id="drop-2" />
                             <ul>
-                               <li><a href="/cart">your cart</a></li>
+                               <li><a href="/cart">your cart ({{cattitems}})</a></li>
                                 <li><a href="/user">user</a></li>
                                 <li><a href="/logout">logout</a></li>
                             </ul>
