--- a/templates/cart.html
+++ b/templates/cart.html
@@ -55,7 +55,11 @@
                           </div>
                       </div></td>
                       <td class="col-sm-1 col-md-1" style="text-align: center">
-                      <input type="email" class="form-control" id="exampleInputEmail1" value="{{item.quantity}}">
+                      <h5><strong>{{item.quantity}}</strong> </h5>
+                      
+                      <span style ="cursor: pointer" data-products="{{item.product.id}}" data-action="remove" class="update-cart" style='font-size:25px;'>&#9664;</span>
+                      <span style ="cursor: pointer" data-products="{{item.product.id}}" data-action="add" class="update-cart" style='font-size:25px;'>&#9654;</span>
+                      
                       </td>
                       <td class="col-sm-1 col-md-1 text-center"><strong>{{item.product.prize}}</strong></td>
                       <td class="col-sm-1 col-md-1 text-center"><strong>{{item.get_total}}</strong></td>
@@ -118,7 +122,10 @@
     
     
         <!-- Grid row -->
-
+    
+{% block js %}
+<script type="text/javascript" src="{% static 'css/cart.js' %}"></script>
+{% endblock %}
   <!--Section: Block Content-->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
