--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -57,7 +57,7 @@
               <h6 class="my-0"> {{item.product.product_name}} ({{item.quantity}})</h6>
               <small class="text-muted">{{item.product.desc}}</small>
             </div>
-            <span class="text-muted">{{item.product.prize}}</span>
+            <span class="text-muted">{{item.product.prize}} </span>
           </li>
 
           {% endfor %}
@@ -128,7 +128,7 @@
 
           <div class="mb-3">
             <label for="address">Address</label>
-            <input type="text" class="form-control" id="address" placeholder="1234 Main St" required>
+            <input type="text" name="address" class="form-control" id="address" placeholder="1234 Main St" required>
             <div class="invalid-feedback">
               Please enter your shipping address.
             </div>
@@ -136,13 +136,13 @@
 
           <div class="mb-3">
             <label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
-            <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
+            <input type="text" name="address2" class="form-control" id="address2" placeholder="Apartment or suite">
           </div>
 
           <div class="row">
             <div class="col-md-5 mb-3">
               <label for="country">Country</label>
-              <select class="custom-select d-block w-100" id="country" required>
+              <select class="custom-select d-block w-100" name="country" id="country" required>
                 <option value="">Choose...</option>
                 <option>United States</option>
               </select>
@@ -152,7 +152,7 @@
             </div>
             <div class="col-md-4 mb-3">
               <label for="state">State</label>
-              <select class="custom-select d-block w-100" id="state" required>
+              <select name="state" class="custom-select d-block w-100" id="state" required>
                 <option value="">Choose...</option>
                 <option>California</option>
               </select>
@@ -162,7 +162,7 @@
             </div>
             <div class="col-md-3 mb-3">
               <label for="zip">Zip</label>
-              <input type="text" class="form-control" id="zip" placeholder="" required>
+              <input type="text" class="form-control" id="zip" name="zip" placeholder="" required>
               <div class="invalid-feedback">
                 Zip code required.
               </div>
@@ -182,8 +182,8 @@
 
             <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to payment</button>
           </div>
-        </form>
       </div>
+      </form>
     </div>
   </div>
 
@@ -257,20 +257,23 @@
 
 
 
-      
-      <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
+
+      <button class="btn btn-primary btn-lg btn-block" id="make-payment" type="submit">Continue to checkout</button>
     </div>
 
 
+
   </div>
   </div>
   </div>
 
   </div>
-
 
   <script type="text/javascript">
+    console.log('attach')
 
+    var shipping = '{{order.complete}}'
+    var Total = '{{order.get_cart_total}}'
     var form = document.getElementById('formmms')
 
 
@@ -280,20 +283,70 @@
       document.getElementById('formmmsbtn').style.visibility = "hidden";
       document.getElementById("payment11").style.visibility = "unset";
 
-    });
+    })
+    document.getElementById("make-payment").addEventListener('click', function (e) {
+      submitformdata()
+    })
+    function submitformdata() {
+      console.log('payment button clicked...')
+      var userformdata = {
+        'name': null,
+        'email': null,
+        'total': Total
+      }
+      var shippinginfo = {
+        'address2': null,
+        'address': null,
+        'country': null,
+        'state': null,
+        
+        'zip': null,
+
+      }
+      if (shipping != false) {
+        shippinginfo.address = form.address.value
+        shippinginfo.address2 = form.address2.value
+        shippinginfo.country = form.country.value
+        shippinginfo.state = form.state.value
+        shippinginfo.zip = form.zip.value
+      }
+      var url = '/processorder/'
+      fetch(url, {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+          'X-CSRFToken': csrftoken,
+        },
+        body: JSON.stringify({ 'form': userformdata, 'shipping': shippinginfo }
+      )
+      })
+        .then((response) => response.json())
+        .then((data) => {
+          console.log('sucess:', data);
+          alert('transection complete');
+          window.location.href = "{%url 'products'%}"
+
+        })
+
+
+
+
+
+
+
+    }
 
   </script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+
   <script src="https://getbootstrap.com/docs/4.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o"
     crossorigin="anonymous"></script>
   <script src="https://getbootstrap.com/docs/4.3/examples/checkout/form-validation.js"></script>
+
 </body>
 
 {% endblock body %}
-
-
 </div>
