--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -145,6 +145,7 @@
               <select class="custom-select d-block w-100" name="country" id="country" required>
                 <option value="">Choose...</option>
                 <option>United States</option>
+                <option>india</option>
               </select>
               <div class="invalid-feedback">
                 Please select a valid country.
@@ -155,6 +156,7 @@
               <select name="state" class="custom-select d-block w-100" id="state" required>
                 <option value="">Choose...</option>
                 <option>California</option>
+                <option>telangana</option>
               </select>
               <div class="invalid-feedback">
                 Please provide a valid state.
@@ -255,19 +257,43 @@
         <hr class="mb-4">
       </div>
 
+      <div id="paypal-button-container"></div>
 
 
-
-      <button class="btn btn-primary btn-lg btn-block" id="make-payment" type="submit">Continue to checkout</button>
+      <!--<button class="btn btn-primary btn-lg btn-block" id="make-payment" type="submit">Continue to checkout</button>-->
     </div>
 
 
 
   </div>
-  </div>
-  </div>
-
-  </div>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js">
+  </script>
+  <script src="https://www.paypal.com/sdk/js?client-id=AaJMejIDjhumOr48XsycjfvQegxAku1dHdrA0DNfkqFSg7bFFkpJTnnwyaLIGUFsPijWx1g51gxp9F-5&currency=USD" data-namespace="paypal_sdk"></script>
+  <script>
+    paypal_sdk.Buttons({
+      createOrder: function (data, actions) {
+        // This function sets up the details of the transaction, including the amount and line item details.
+        return actions.order.create({
+          purchase_units: [{
+            amount: {
+              value: '0.01'
+            }
+          }]
+        });
+      },
+      onApprove: function (data, actions) {
+        // This function captures the funds from the transaction.
+        return actions.order.capture().then(function (details) {
+          // This function shows a transaction success message to your buyer.
+          alert('Transaction completed by ' + details.payer.name.given_name);
+        });
+      }
+    }).render('#paypal-button-container');
+    //This function displays Smart Payment Buttons on your web page.
+  </script>
 
   <script type="text/javascript">
     console.log('attach')
@@ -284,9 +310,10 @@
       document.getElementById("payment11").style.visibility = "unset";
 
     })
-    document.getElementById("make-payment").addEventListener('click', function (e) {
+
+    /* document.getElementById("make-payment").addEventListener('click', function (e) {
       submitformdata()
-    })
+    }) */
     function submitformdata() {
       console.log('payment button clicked...')
       var userformdata = {
@@ -299,7 +326,7 @@
         'address': null,
         'country': null,
         'state': null,
-        
+
         'zip': null,
 
       }
@@ -318,7 +345,7 @@
           'X-CSRFToken': csrftoken,
         },
         body: JSON.stringify({ 'form': userformdata, 'shipping': shippinginfo }
-      )
+        )
       })
         .then((response) => response.json())
         .then((data) => {
@@ -349,4 +376,3 @@
 </body>
 
 {% endblock body %}
-</div>
