--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -271,7 +271,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js">
   </script>
-  <script src="https://www.paypal.com/sdk/js?client-id=AaJMejIDjhumOr48XsycjfvQegxAku1dHdrA0DNfkqFSg7bFFkpJTnnwyaLIGUFsPijWx1g51gxp9F-5&currency=USD" data-namespace="paypal_sdk"></script>
+  <script src="https://www.paypal.com/sdk/js?client-id=ARyCltS9Vsp7zXKiLFd66PokHMz2XtqqruAnIxyfdcJho64qv20FxNkRJRhpJxs35LG0_X6h5fdnsbOo" data-namespace="paypal_sdk"></script>
   <script>
     paypal_sdk.Buttons({
       createOrder: function (data, actions) {
